Bug 103896 - Tab bar within dialogs not displayed correctly
Summary: Tab bar within dialogs not displayed correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All macOS (All)
: medium normal
Assignee: Thorsten Wagner
URL:
Whiteboard: target:5.5.0
Keywords: regression
: 105437 105780 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-11-12 23:14 UTC by Thorsten Wagner
Modified: 2017-05-23 10:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (28.73 KB, image/tiff)
2016-11-12 23:14 UTC, Thorsten Wagner
Details
LO tab minor UI issue w rounded corners (1.91 MB, video/quicktime)
2017-02-06 08:33 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2016-11-12 23:14:55 UTC
Created attachment 128707 [details]
Screenshot

Tab bars within dialogs are no longer displayed correctly when selecting second tab or other tabs except first tab (see attached screenshot). Issue seems to be present on OS X only and exists since LO 5.2.

Steps to reproduce:

(1) Open Writer

(2) Select dialog Format/Character

(3) Select second tab "Font Effects"

Issue is visible within other dialogs with tab bar too.
Comment 1 steve 2016-11-13 15:44:29 UTC
confirmed → NEW

for me the behavior is identical as to what thorsten describes: as soon as any other tab is selected, the tab bar section for "font" is shown with rounded corners on the right side.
Comment 2 Alex Thurgood 2017-01-23 08:36:33 UTC
*** Bug 105437 has been marked as a duplicate of this bug. ***
Comment 3 Alex Thurgood 2017-02-06 08:27:12 UTC
*** Bug 105780 has been marked as a duplicate of this bug. ***
Comment 4 steve 2017-02-06 08:33:06 UTC
Created attachment 130932 [details]
LO tab minor UI issue w rounded corners
Comment 5 Thorsten Wagner 2017-05-01 14:46:56 UTC
Submitted patch to gerrit
Comment 6 steve 2017-05-21 08:03:40 UTC
Thorsten, what's the status here? Could you add a link to gerrit?
Comment 7 Thorsten Wagner 2017-05-22 11:30:07 UTC
Change ID: Ia18b530f3cfd48273ae00471e23131cae0df9eda
Link to Gerrit: https://gerrit.libreoffice.org/#/c/37123/
Comment 8 Commit Notification 2017-05-22 14:13:28 UTC
Thorsten Wagner committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd71e5b97fb8042df8770470ffa75fd5227ad5e6

tdf#103896: Fix wrong leading and trailing tabs within dialogs on macOS

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 steve 2017-05-23 10:09:53 UTC
Version: 5.5.0.0.alpha0+
Build ID: 0e6297932252403883a6057feee488e4ee2bc360
CPU threads: 4; OS: Mac OS X 10.12.5; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-05-22_23:39:45
Locale: de-DE (de_DE.UTF-8); Calc: group

verified

looks a lot better now. thx thorsten.