tdf#103896: Fix wrong leading and trailing tabs within dialogs on macOS

Change-Id: Ia18b530f3cfd48273ae00471e23131cae0df9eda